# test_task

./: .flake8  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
wallet/api/: models.py  serializers.py  urls.py  views.py
wallet/api/migrations/: 0001_initial.py  0002_alter_transaction_amount_alter_transaction_id_and_more.py
wallet/api/tests/: test_models.py  test_views.py
wallet/wallet/: settings.py  urls.py
